--- a/src/lib/global.css
+++ b/src/lib/global.css
@@ -20,4 +20,24 @@ body {
 	width: 100%;
 	height: 100%;
 	pointer-events: none;
+	circle {
+		fill-opacity: 0.6;
+		color: steelblue;
+		stroke: white;
+	}
+}
+
+header {
+	display: flex;
+	gap: 1em;
+	align-items: baseline;
+	label {
+		margin-left: auto;
+	}
+	em {
+		color: gray;
+	}
+	time {
+		display: block;
+	}
 }
